<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_usuario"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.teravalt.demointent.NovoUsuarioActivity">

    <EditText
        style="@style/inputs"
        android:hint="@string/hint_username"
        android:id="@+id/etUsername"/>

    <EditText style="@style/inputs"
        android:hint="@string/hint_nome"
        android:id="@+id/etNome" />

    <EditText style="@style/inputs_senha"
        android:hint="@string/hint_senha"
        android:id="@+id/etSenha" />

    <Button
        android:id="@+id/btCriar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_criar" />


</LinearLayout>
